# roadsage-metrics

./: .gitignore  .gitlab-ci.yml  README.md
backend/: README.md  pyproject.toml
backend/src/: database.py  database_conf.py  main.py  schemas.py  test_database_conf.py
backend/src/routes/: app_commands.py  sensor_readings.py  sso.py  users.py
backend/src/tests/: helpers.py  test_app_commands.py  test_authentication.py  test_hello_world.py  test_sensor_readings.py
backend/src/types/: jose.pyi
backend/src/types/passlib/: context.pyi
backend/src/utils/: auth.py
frontend/: .prettierignore  README.md  package-lock.json  package.json  quasar.conf.js
frontend/src/: App.vue
frontend/src/boot/: auth.ts  axios.ts  googleAuth.js
frontend/src/components/: Chart.vue  Convenience.vue  GoogleSignInButton.vue  MissionStatement.vue  Safety.vue  SelectUser.vue  SignInForm.vue  SignUpForm.vue  UpdatePasswordForm.vue
frontend/src/css/: app.sass  app.scss  quasar.variables.sass  quasar.variables.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: Dashboard.vue  Landing.vue  SignIn.vue  SignUp.vue
frontend/src/router/: routes.ts
